# libflattree

./: CMakeLists.txt  LICENSE  NOTICE  README.md  package-lock.json  package.json
.github/workflows/: integrate.yml
include/: flattree.h
src/: flattree.c
test/: CMakeLists.txt  children.c  depth.c  full-roots.c  index.c  iterator.c  offset.c  parent.c  sibling.c  spans.c
